# docs/swagger.json
@@ -837,10 +837,16 @@
                 "deleted_at": {
                     "$ref": "#/definitions/gorm.DeletedAt"
                 },
-                "id": {
+                "entity_type": {
                     "type": "string"
                 },
-                "name": {
+                "external_name": {
+                    "type": "string"
+                },
+                "external_unique_id": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "string"
                 },
                 "organization": {
@@ -855,9 +861,6 @@
                     "items": {
                         "$ref": "#/definitions/models.Prediction"
                     }
-                },
-                "type": {
-                    "type": "string"
                 },
                 "updated_at": {
                     "type": "string"
@@ -895,10 +898,6 @@
                 },
                 "is_outside_coverage": {
                     "type": "boolean"
-                },
-                "mode": {
-                    "description": "Mode: SUPERVISED, UNSUPERVISED, PREDICTION",
-                    "type": "string"
                 },
                 "near_points": {
                     "type": "array",
